syntax = "proto3";

package message;

import "google/api/annotations.proto";

service MessageService {
  rpc CreateConversation (CreateConversationRequest) returns (Conversation) {
    option (google.api.http) = {
      post: "/v1/conversations"
    };
  }
  rpc CreateMessage (CreateMessageRequest) returns (Message) {
    option (google.api.http) = {
      post: "/v1/conversations/{conversation_id}/messages"
      body: "*"
    };
  }
  rpc GetMessages (GetMessagesRequest) returns (Messages) {
    option (google.api.http) = {
      get: "/v1/conversations/{conversation_id}/messages"
    };
  }
}

message CreateConversationRequest {
}

message Conversation {
  string id = 1;
  int64 created_at = 2;
}

message CreateMessageRequest {
  string conversation_id = 1;
  string sender = 2;
  string body = 3;
}

message Message {
  string conversation_id = 1;
  string sender = 2;
  string body = 3;
  int64 created_at = 4;
}

message GetMessagesRequest {
  string conversation_id = 1;
}

message Messages {
  repeated Message messages = 1;
}
